--- a/main.html
+++ b/main.html
@@ -9,22 +9,24 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table>
-		<thead>
-			<tr>
-				<th>Roll number</th>
-				<th>Name</th>
-			</tr>
-		</thead>
+		
 		<tbody>
-			<tr>
-				<td>7</td>
-				<td>Naruto</td>
+			<tr> 
+				<th>Roll number</th>
+				<td>19265A1205</td>
+				<td>Ranveer</td>
+				
 			</tr>
 			<tr>
-				<td>5</td>
-				<td>Hinata</td>
+				<th>Name</th>
+				<td>1926541205</td>
+				<td>Mahesh</td>
 			</tr>
+			
 		</tbody>
+			
+		
+		
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
