--- a/main.html
+++ b/main.html
@@ -9,16 +9,21 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table>
+		<thead>
+			<th>Roll number</th>
+			<th>Name</th>
+			
+		</thead>
 		
 		<tbody>
 			<tr> 
-				<th>Roll number</th>
+			
 				<td>19265A1205</td>
 				<td>Ranveer</td>
 				
 			</tr>
 			<tr>
-				<th>Name</th>
+				
 				<td>1926541205</td>
 				<td>Mahesh</td>
 			</tr>
